--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1> Welcome to my portfolio<h1>
-        <src = "https://drive.google.com/file/d/14k3jMOQ18CaUXZJH-YfPtBh6j9LHIyAk/view?usp=sharing" alt="Neba Roland">
+        <src = "ProfilePic.png" alt="Neba Roland">
     </body>
 </html>
