--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1> Welcome to my portfolio<h1>
-        <src = "ProfilePic.png" alt="Neba Roland">
+        <src = "ProfilePic.jpg" alt="Neba Roland">
     </body>
 </html>
