--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1> Welcome to my portfolio<h1>
-        <src = "ProfilePic.jpg" alt="Neba Roland">
+        <src = "https://github.com/Roland-coder/roland-coder.github.io/blob/master/ProfilePic.jpg" alt="Neba Roland">
     </body>
 </html>
