--- a/index.html
+++ b/index.html
@@ -3,39 +3,17 @@
     <head>
         <meta charset = "utf-8">
         <title>My Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div class="navbar" style = "
-                                     .navbar {
-                                      overflow: hidden;
-                                      background-color: #333;
-                                      position: fixed; /* Set the navbar to fixed position */
-                                      top: 0; /* Position the navbar at the top of the page */
-                                      width: 100%; /* Full width */
-                                    }
-
-                                    /* Links inside the navbar */
-                                      .navbar a {
-                                      float: left;
-                                      display: block;
-                                      color: #f2f2f2;
-                                      text-align: center;
-                                      padding: 14px 16px;
-                                      text-decoration: none;
-                                    }
-                                     .navbar a:hover {
-                                      background: #ddd;
-                                      color: black;
-                                    }">
+        <div class="navbar">
           <a href="#home">Home</a>
           <a href="#news">About</a>
           <a href="#projects>Projects> 
           <a href="#contact">Contact</a>
         </div>
 
-        <div class="main" style="".main {
-                                          margin-top: 30px; /* Add a top margin to avoid content overlay */
-                                        }>
+        <div class="main" >
             <h1> Welcome to my portfolio<h1>
             <img src ="ProfilePic.jpg" alt="Neba Roland">
         </div>
