--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="main" >
             <p>             
             <h1> Welcome to my portfolio<h1>
-            <img src ="ProfilePic.jpg" alt="Neba Roland">
+            <img src ="whatsapp.jpg" alt="Neba Roland">
         </div>
 
     </body>
