--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <meta charset = "utf-8">
-        <title>My Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <meta charset="utf-18">
+        <title>Neba Roland</title>
+        <meta name="viewport" content="width=device-with, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="navbar">
-          <a href="#home">Home</a>
-          <a href="#news">About</a>
-          <a href="#projects>Projects> 
-          <a href="#contact">Contact</a>
-        </div>
+        <nav>
+           <label class="logo">NEBA</label>
+           <ul>
+               <li><a href="#">Home</a></li>
+               <li><a href="#">About</a></li>
+               <li><a href="#">Projects</a></li>
+               <li><a href="#">Resume</a></li>
+               <li><a href="#">Contact</a></li>
+           </ul>
+        </nav>
+        <section class="me">
+            <!-- <br> -->
+            <div class="home">
+                <img src="w3.jpg">
+            
+                <h1>Neba Roland Ngwa</h1>
+                <h2>Aspiring Data scientist | Python Enthusiast</h2>
 
-        <div class="main" >
-            <p>             
-            <h1> Welcome to my portfolio<h1>
-            <img src ="whatsapp.jpg" alt="Neba Roland">
-        </div>
+            </div>
 
+            
+
+        </section>
+        <section>
+            <div class="about">
+                <h2> ABOUT </h2>
+                <br>
+                <br>
+                <p> I am currently a second year computer science student at the African Leadership University
+                    with in Data Science and Software engineering, I am currently doing the IBM Data Science professional certificate
+                    and currently looking for opportunities to apply his skills to solving real world problems
+                </p>
+            </div>
+        </section>
     </body>
 </html>
