--- a/index.html
+++ b/index.html
@@ -1,48 +1,30 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <meta charset="utf-18">
-        <title>Neba Roland</title>
-        <meta name="viewport" content="width=device-with, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <nav>
-           <label class="logo">NEBA</label>
-           <ul>
-               <li><a href="#">Home</a></li>
-               <li><a href="#">About</a></li>
-               <li><a href="#">Projects</a></li>
-               <li><a href="#">Resume</a></li>
-               <li><a href="#">Contact</a></li>
-           </ul>
-        </nav>
-        <section class="me">
-            <!-- <br> -->
-            <div class="home">
-                <img src="w3.jpg">
-                <br>
-                <br>
-                <h1>Neba Roland Ngwa</h1>
-                <h2>Aspiring Data scientist | Python Enthusiast</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Responsive</title>
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <link rel="stylesheet" href="assignment.css">
+</head>
+<body>
+    <h1>Our Menu</h1>
+    <div class="nan">
+        <p class="one">Chicken</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
 
-            </div>
+    </div>
 
-            
+    <div class="nan">
+        <p class="two">Chicken</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 
-        </section>
-        <section class="about">
-            <div class="about">
-                <h2> ABOUT </h2>
-                <br>
-                <br>
-                <p> I am currently a second year computer science student at the African Leadership University
-                    with in Data Science and Software engineering, I am currently doing the IBM Data Science professional certificate
-                    and currently looking for opportunities to apply his skills to solving real world problems
-                </p>
-            </div>
-        </section>
+    </div>
 
+    <div class="nan1">
+        <p class="three">Chicken</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 
-    </body>
+    </div>
+
+</body>
 </html>
