--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </div>
 
     <div class="nan">
-        <p class="two">Chicken</p>
+        <p class="two">Beef</p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 
     </div>
 
     <div class="nan1">
-        <p class="three">Chicken</p>
+        <p class="three">Sushi</p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 
     </div>
