--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Princess+Sofia&display=swap" rel="stylesheet">
     </head>
     <body id="top">
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark" >
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-fixed-top" >
             <div class="container">
                 <a class="navbar-brand" href="#" style = "color: white"><h3>NEBA</h3></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
