--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Princess+Sofia&display=swap" rel="stylesheet">
     </head>
     <body id="top">
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-fixed-top" >
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top" >
             <div class="container">
                 <a class="navbar-brand" href="#" style = "color: white"><h3>NEBA</h3></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
           </section>
           <section id="interests">
             <div class="container py-5" style="text-align: center;">
-                <h2>Interests</h2>
+                <h2 class="text-danger">Interests</h2>
             </div>
             <div class="container py-2 myGrid">
                 
